Ejercicio 3 (práctica 4) arreglado. Cambié el comparador del Puntaje para que no requiera una nueva clase y completé la sugerencia por similaridad. Test completado